# QFinIndia

./: README.md  live_test.py  market_report.py  pyproject.toml  test_script.py
data/: nifty_option_chain.json
qfinindia/: LICENSE  README.md  __init__.py  analytics.py  plotting.py  pyproject.toml  report.py  synthetic.py
qfinindia.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qfinindia/data/: nse.py
qfinindia/market/: market_intelligence.py  option_chain.py
qfinindia/options/: black_scholes.py
qfinindia/volatility/: __init__.py  analytics.py  distribution.py  rnd.py  scenario.py  smile.py  surface.py  tailrisk.py  vol_metrics.py
